# Crypto-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
crypto_agent/: __init__.py  config.py  main.py  runner.py
crypto_agent/analysis/: __init__.py  indicators.py
crypto_agent/api/: routes.py
crypto_agent/backtesting/: __init__.py  engine.py
crypto_agent/core/: __init__.py  models.py  providers.py  stablecoins.py  timeframes.py
crypto_agent/evaluation/: __init__.py  __main__.py  harness.py  history.py  optimize.py  outcomes.py
crypto_agent/ingestion/: __init__.py  binance.py  coingecko.py  historical.py  http.py  news.py  sentiment.py  social.py
crypto_agent/notifications/: __init__.py  telegram.py
crypto_agent/paper/: __init__.py  engine.py  portfolio.py
crypto_agent/reports/: __init__.py  daily.py
crypto_agent/services/: __init__.py  agent.py
crypto_agent/signals/: __init__.py  engine.py  risk.py
crypto_agent/storage/: __init__.py  sqlite.py
data/: crypto_agent.sqlite3-shm  crypto_agent.sqlite3-wal
docs/: architecture.md  configuration.md  operations.md  phase2.md  roadmap.md  safety.md  technical.md
scripts/: bootstrap.sh  doctor.sh  healthcheck.sh  run-local.sh
tests/: test_backtesting.py  test_evaluation.py  test_historical.py  test_indicators.py  test_notifications.py  test_optimize.py  test_paper.py  test_providers.py  test_reports.py  test_service.py  test_signal_engine.py  test_storage.py
